collapse navbar fixed, vertical responsive votes

--- a/html/style/style.css
+++ b/html/style/style.css
@@ -95,8 +95,30 @@ a:hover {
 }
 
 .vote-ratio {
+  width: 42px !important;
   width: auto;
   padding: 0 0.6em;
+}
+
+/* Remember: more pixels, less zoom */
+@media (max-width: 1200px) {
+  .btn-group-vertical-when-responsive {
+    flex-direction: column;
+    justify-content: center;
+    position: relative;
+    display: inline-flex;
+    vertical-align: middle;
+  }
+
+  .btn-group > .btn-group:not(:last-child) > .btn,
+  .btn-group > .btn:not(:last-child):not(.dropdown-toggle) {
+    border-radius: 5px 5px 0 0;
+  }
+
+  .btn-group > .btn-group:not(:first-child) > .btn,
+  .btn-group > .btn:not(:first-child):not(.dropdown-toggle) {
+    border-radius: 0 0 5px 5px;
+  }
 }
 
 .navbar-expand-lg .navbar-nav .nav-link {
